--- a/index.html
+++ b/index.html
@@ -2,146 +2,214 @@
 <html lang="uk">
 <head>
 <meta charset="UTF-8">
-<title>Demo Auth</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<title>AutoWash Self Service</title>
 <style>
 :root {
-  --bg: #f5f7fb;
-  --card: #ffffff;
-  --primary: #4f46e5;
-  --text: #1f2937;
-  --muted: #6b7280;
+  --bg-light: #f4f6fb;
+  --bg-dark: #0f172a;
+  --card-light: #fff;
+  --card-dark: #1e293b;
+  --text-light: #0f172a;
+  --text-dark: #f4f6fb;
+  --primary: #2563eb;
+  --accent: #22c55e;
   --radius: 16px;
 }
 
-* {
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+body {
+  margin:0;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+  background: var(--bg-light);
+  color: var(--text-light);
+  transition: background .4s, color .4s;
 }
 
-body {
-  margin: 0;
-  height: 100vh;
-  background: var(--bg);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+header {
+  background: var(--primary);
+  color: white;
+  display:flex;
+  justify-content: space-between;
+  align-items:center;
+  padding:14px 20px;
+}
+
+header button {
+  background:none;
+  border:1px solid rgba(255,255,255,0.6);
+  border-radius:12px;
+  padding:6px 12px;
+  color:white;
+  cursor:pointer;
 }
 
 .container {
-  width: 360px;
-  background: var(--card);
+  max-width:420px;
+  margin:auto;
+  padding:16px;
+}
+
+.card {
+  background: var(--card-light);
   border-radius: var(--radius);
-  padding: 28px;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.08);
-  animation: fadeIn 0.6s ease;
+  padding:18px;
+  margin-bottom:16px;
+  box-shadow:0 12px 24px rgba(0,0,0,.08);
+  transition: background .4s, color .4s;
 }
 
-h1 {
-  margin: 0 0 8px;
-  font-size: 22px;
-  color: var(--text);
-}
-
-p {
-  margin: 0 0 24px;
-  font-size: 14px;
-  color: var(--muted);
-}
-
-input {
-  width: 100%;
-  padding: 14px;
-  margin-bottom: 14px;
-  border-radius: 12px;
-  border: 1px solid #e5e7eb;
-  font-size: 14px;
-}
-
-input:focus {
-  outline: none;
-  border-color: var(--primary);
-}
-
-button {
-  width: 100%;
-  padding: 14px;
-  border-radius: 12px;
-  border: none;
+h2 {margin:0 0 10px;}
+p {margin:0 0 8px; color: #64748b;}
+button.btn {
+  width:100%;
+  padding:14px;
+  border:none;
+  border-radius:14px;
+  margin-top:8px;
+  font-size:15px;
+  cursor:pointer;
   background: var(--primary);
-  color: white;
-  font-size: 15px;
-  cursor: pointer;
-  transition: transform .2s, box-shadow .2s;
+  color:white;
+  transition:.3s;
 }
-
-button:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 6px 14px rgba(79,70,229,0.35);
-}
-
-.hidden {
-  display: none;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
+button.btn:hover{opacity:.9;}
+button.green{background:var(--accent);}
+.hidden{display:none;}
+.program{display:flex;justify-content:space-between;align-items:center;padding:12px;border:1px solid #e5e7eb;border-radius:14px;margin-bottom:10px;}
+.program span{font-size:14px;}
+.fade{animation:fadeIn .4s ease;}
+@keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
+.switch{margin-top:10px;text-align:center;cursor:pointer;font-size:14px;color:var(--primary);}
 </style>
 </head>
-
 <body>
 
-<!-- LOGIN -->
-<div class="container" id="login">
-  <h1>Вхід</h1>
-  <p>Увійдіть за email або номером телефону</p>
+<header>
+  <b>🚗 AutoWash</b>
+  <div>
+    <button onclick="admin()">Admin</button>
+    <span class="switch" onclick="toggleTheme()">🌓 Тема</span>
+  </div>
+</header>
 
-  <input type="email" id="email" placeholder="Email">
-  <input type="tel" id="phone" placeholder="Номер телефону">
-
-  <button onclick="login()">Продовжити</button>
+<!-- HOME -->
+<div class="container fade" id="home">
+  <div class="card">
+    <h2>Автомийка самообслуговування</h2>
+    <p>Оберіть пост та почніть мийку</p>
+    <button class="btn" onclick="openPosts()">Почати</button>
+  </div>
+  <div class="card">
+    <h2>Тарифи</h2>
+    <p>💦 Вода — 10 грн / хв</p>
+    <p>🧼 Піна — 15 грн / хв</p>
+    <p>✨ Віск — 20 грн / хв</p>
+  </div>
 </div>
 
-<!-- PASSWORD -->
-<div class="container hidden" id="password">
-  <h1>Створення пароля</h1>
-  <p>Придумайте пароль для акаунта</p>
-
-  <input type="password" placeholder="Новий пароль">
-  <input type="password" placeholder="Повторіть пароль">
-
-  <button onclick="alert('Демо-версія 🙂')">Зберегти</button>
+<!-- POSTS -->
+<div class="container hidden fade" id="posts">
+  <div class="card">
+    <h2>Оберіть пост</h2>
+    <button class="btn" onclick="openWash(1)">Пост №1</button>
+    <button class="btn" onclick="openWash(2)">Пост №2</button>
+    <button class="btn" onclick="openWash(3)">Пост №3</button>
+    <button class="btn green" onclick="backHome()">Назад</button>
+  </div>
 </div>
 
-<!-- DEV MODE -->
-<div class="container hidden" id="dev">
-  <h1>Режим розробника</h1>
-  <p>Перевірка кодів доступу</p>
+<!-- WASH -->
+<div class="container hidden fade" id="wash">
+  <div class="card">
+    <h2 id="postTitle">Пост</h2>
+    <p>Оберіть програму</p>
+    <div class="program"><span>💦 Вода</span><button onclick="start('Вода')">▶</button></div>
+    <div class="program"><span>🧼 Активна піна</span><button onclick="start('Піна')">▶</button></div>
+    <div class="program"><span>✨ Віск</span><button onclick="start('Віск')">▶</button></div>
+    <p id="timerDisplay"></p>
+    <button class="btn green" onclick="finish()">Завершити</button>
+    <button class="btn" onclick="backPosts()">Назад</button>
+  </div>
+</div>
 
-  <input type="text" placeholder="Введіть код">
-  <button onclick="alert('Код прийнято (демо)')">Перевірити</button>
+<!-- ADMIN -->
+<div class="container hidden fade" id="admin">
+  <div class="card">
+    <h2>Режим адміністратора</h2>
+    <p>Активних постів: <span id="activePosts">0</span></p>
+    <p>Зароблено сьогодні: <span id="earnings">0</span> грн</p>
+    <button class="btn" onclick="backHome()">Назад</button>
+  </div>
 </div>
 
 <script>
-function login() {
-  const phone = document.getElementById("phone").value.trim();
-  const email = document.getElementById("email").value.trim();
+let activeTheme = 'light';
+let washTimer;
+let earnings = 0;
+let activePosts = 0;
 
-  document.getElementById("login").classList.add("hidden");
+function toggleTheme(){
+  if(activeTheme==='light'){
+    document.body.style.background='#0f172a';
+    document.body.style.color='#f4f6fb';
+    document.querySelectorAll('.card').forEach(c=>c.style.background='#1e293b');
+    activeTheme='dark';
+  }else{
+    document.body.style.background='#f4f6fb';
+    document.body.style.color='#0f172a';
+    document.querySelectorAll('.card').forEach(c=>c.style.background='#fff');
+    activeTheme='light';
+  }
+}
 
-  if (phone === "1234321") {
-    document.getElementById("dev").classList.remove("hidden");
-  } else if (phone || email) {
-    document.getElementById("password").classList.remove("hidden");
-  } else {
-    alert("Введіть email або номер телефону");
-    document.getElementById("login").classList.remove("hidden");
+function hideAll(){
+  ['home','posts','wash','admin'].forEach(id=>document.getElementById(id).classList.add('hidden'));
+}
+
+function openPosts(){
+  hideAll(); document.getElementById('posts').classList.remove('hidden');
+}
+function backHome(){ hideAll(); document.getElementById('home').classList.remove('hidden'); }
+function backPosts(){ hideAll(); document.getElementById('posts').classList.remove('hidden'); }
+
+function openWash(n){
+  hideAll(); 
+  document.getElementById('postTitle').innerText='Пост №'+n;
+  document.getElementById('wash').classList.remove('hidden');
+  activePosts++;
+  document.getElementById('activePosts').innerText=activePosts;
+  document.getElementById('timerDisplay').innerText='';
+  clearInterval(washTimer);
+}
+
+function start(program){
+  clearInterval(washTimer);
+  let seconds=0;
+  document.getElementById('timerDisplay').innerText='Запущено '+program+' | 0 хв 0 сек';
+  washTimer=setInterval(()=>{
+    seconds++;
+    let m=Math.floor(seconds/60), s=seconds%60;
+    document.getElementById('timerDisplay').innerText=`Запущено ${program} | ${m} хв ${s} сек`;
+  },1000);
+  earnings += (program==='Вода'?10:(program==='Піна'?15:20));
+  document.getElementById('earnings').innerText=earnings;
+}
+
+function finish(){
+  clearInterval(washTimer);
+  alert('Мийку завершено');
+  backHome();
+}
+
+function admin(){
+  const code = prompt('Введіть адмін-код');
+  if(code==='1234321'){
+    hideAll();
+    document.getElementById('admin').classList.remove('hidden');
+  }else{
+    alert('Невірний код');
   }
 }
 </script>
-
 </body>
 </html>
